--- a/package.json
+++ b/package.json
@@ -57,5 +57,9 @@
         "test:unit:watch": "lwc-services test:unit --watch",
         "watch": "lwc-services watch",
         "watch:production": "lwc-services watch --mode=production"
+    },
+    "volta": {
+        "node": "14.15.3",
+        "yarn": "1.22.10"
     }
 }
